AVFoundation Sound, UIGestureRecognizer Dependencies, Custom UIGestureRecognizer

--- a/MonkeyPinch/Base.lproj/Main.storyboard
+++ b/MonkeyPinch/Base.lproj/Main.storyboard
@@ -37,6 +37,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="bananaPan" destination="1W5-AR-sMf" id="zqK-AL-g6F"/>
+                        <outlet property="monkeyPan" destination="gfT-M0-WIP" id="eCc-YM-1kK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" id="gfT-M0-WIP">
